# maths

./: .gitignore  README.md
average_speed/: Cargo.toml
average_speed/src/: ave_speed.rs  lib.rs  main.rs
average_speed/tests/: integration_tests.rs
irrational_proof/: Cargo.toml  README.md
irrational_proof/src/: main.rs
kepler_3rd_law/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
kepler_3rd_law/src/: main.rs
